Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-37940

[Jepsen] Logic exception thrown in VBucket::collectionsRolledBack()

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Major
    • 7.0.0
    • master
    • couchbase-bucket
    • Untriaged
    • Unknown
    • KV Sprint 2020-February

    Description

      During the kv-engine-cheshire-cat-jepsen-nightly-37 the following test:
      lein trampoline run test --nodes-file ./nodes --username vagrant --ssh-private-key ./resources/vagrantkey --workload=kill --scenario=kill-memcached --replicas=2 --no-autofailover --durability=0:0:0:100 --eviction-policy=value --use-json-docs --doc-padding-size=4096 --enable-tcp-capture --hashdump --enable-memcached-debug-log-level
      With message:

      CRITICAL Caught unhandled std::exception-derived exception. what(): VBucket::collectionsRolledBack failed to find:0x0
      

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            jwalker Jim Walker
            richard.demellow Richard deMellow
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes

                PagerDuty