MB-37940: Handle rollback where no collections stats are found

No collection stats currently means that the collection was never
written (no documents). Remove the exception from rollback code
as it is incorrect.

Change-Id: Ibd714513317c430ddb26f55767adb19cc3722c66
Reviewed-on: http://review.couchbase.org/122338
Tested-by: Build Bot <build@couchbase.com>
Reviewed-by: Richard de Mellow <richard.demellow@couchbase.com>